--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,252 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap');
+
+a{
+  text-decoration:none;
+}
+
+#menu {
+    z-index: 2;
+  }
+
+nav{
+    background-color:#0c0d11;
+    color:rgba(255, 255, 255, 1);
+}
+h1{
+    margin:0;
+    padding: 18px 0;
+}
+  #menu-bar {
+    margin: 30px 0 20px 20px;
+    cursor: pointer;
+  }
+
+  .nav {
+    transition: 0.3s ease;
+    display: none;
+  }
+  
+  .nav ul {
+    padding: 0 22px;
+  }
+  
+  .nav li {
+    list-style: none;
+    padding: 12px 0;
+  }
+  
+  .nav li a {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+  }
+  
+  .nav li a:hover {
+    font-weight: bold;
+  }
+  
+  .menu-bg, #menu {
+    top: 0;
+    left: 0;
+    position: absolute;
+  }
+  
+  .menu-bg {
+    z-index: 1;
+    width: 0;
+    height: 0;
+    margin: 30px 0 20px 20px;
+    background: radial-gradient(circle, #002073, #0069eb);
+    border-radius: 50%;
+    transition: 0.3s ease;
+  }
+  
+  .change {
+    display: block;
+  }
+  
+  .change-bg {
+    width: 650px;
+    height: 600px;
+    transform: translate(-60%,-30%);
+  }
+
+  .title{
+    margin-left: 60px;
+  }
+
+  .menu-img{
+    width: 24px;
+    height: 20px;
+    margin-top:-10px;
+  }
+
+  p{
+    margin:0;
+    padding:10px 0;
+  }
+.MainText{
+    text-align: center;
+    color: white; 
+    font-size: 18px;
+    font-weight: 400;
+    padding: 20px 30px 0 30px;
+}
+
+.Brain_blue{
+  width:200px;
+  height:200px;
+}
+
+.MainWhiteText{
+    font-family: 'PT Serif';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 24px;
+letter-spacing: 0.05em;
+
+color: #FFFFFF;
+}
+  .yellow{
+font-style: normal;
+font-weight: 600;
+font-size: 32px;
+line-height: 35px;
+text-transform: uppercase;
+
+color: #FFC700;
+
+text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+.yellowSmall{
+  padding-top:25px;
+  color: #FFC700;
+}
+
+.yellowBtn{
+padding:10px 30px;
+background: radial-gradient(50% 50% at 50% 50%, #FFC700 0%, #FFC700 100%);
+border-radius: 20px;
+font-family: 'Merriweather';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 18px;
+
+letter-spacing: 0.1em;
+text-transform: uppercase;
+
+color: #0D0C11;
+  }
+
+  .arrow{
+    margin:20px 0;
+    height:24px;
+  }
+
+  .qoute{
+    font-family: 'Yeseva One';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 23px;
+
+color: #FFFFFF;
+  }
+
+.gradient{
+  padding-top: 30px;
+  background: radial-gradient(rgba(41, 80, 194, 1), rgba(38, 91, 199, 0.96), rgba(39, 98, 187, 0) );
+}
+.qoute{
+  display:flex;
+  justify-content:space-between;
+}
+.qoute_p{
   text-align: center;
+letter-spacing: 0.05em;
+  padding:0 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.q_left{
+  font-size:60px;
+  padding:30px 0 0 30px;
+  text-align:left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.q_right{
+  font-size:60px;
+  padding:0 30px 30px 0;
+  text-align:right;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.third, .four{
+  padding: 30px 10px;
+  text-align:center;
+}
+.third p{
+  text-align:left;
+}
+
+.third b{
+  text-transform: uppercase;
+}
+
+.brain{
+  margin: auto;
+  display: block;
+}
+
+.four p{
+  text-align:left;
+  margin:10px 0;
+}
+
+.four{
   color: white;
+  font-size: 16px;
+line-height: 23px;
+font-weight: 00;
 }
 
-.App-link {
-  color: #61dafb;
+.gray-bg{
+  background: rgba(243, 243, 242, 0.8);
+  color: black;
+  border-radius: 20px;
+  padding: 20px 10px;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.four button{
+  margin: 20px 0 0 0;
+  background: rgba(0, 0, 0, 0);
+  color:white;
+  border:solid 1px white;
+}
+
+footer{
+  color: rgba(255, 255, 255, 0.5);
+  margin-top:50px;
+  text-align:center;
+}
+
+@media screen and (min-width: 900px) {
+  .qoute_p{
+    padding:0 300px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .q_left{
+    padding:30px 0 0 300px;
+  }
+  
+  .q_right{
+
+    padding:0 300px 30px 0;
+  }
+  
+  .third, .four{
+    padding: 30px 200px;
   }
 }
